namespace dotnet_rpg.Data.DataModels
{
    public class UserRegistrationDTO
    {
        public string Username { get; set; }
        public string Password { get; set; }
    }
}
