using System;
using System.Collections.Generic;
using System.Text;

namespace Business.Models
{
    public enum RpgClass
    {
        Knight = 1,
        Mage = 2, 
        Cleric = 3,
        Healer = 4
    }
}
